# kdevelop-cvs-plugin

./: .kdev_include_paths  CMakeLists.txt  DESIGN.txt  README.md  checkoutdialog.h  commitdialog.h  cvs.categories  cvsannotatejob.h  cvsdiffjob.h  cvsgenericoutputview.h  cvsjob.h  cvslogjob.h  cvsmainview.h  cvsplugin.cpp  cvsplugin.h  cvsproxy.h  cvsstatusjob.h  editorsview.h  importdialog.h  importmetadatawidget.h
